Responsive styles added for the testimonials section to ensure it looks good on mobiles as well as desktops

--- a/assets/less/responsive.less
+++ b/assets/less/responsive.less
@@ -63,6 +63,16 @@
 	#showcase .counter-wrapper {
 		padding: 25px 0;
 	}
+
+	#tm-carousel .tm-wrapper {
+		min-height: 415px;
+	}
+
+	#tm-carousel .tm-wrapper .tm-img {
+		border-right: 0;
+		border-bottom: 3px solid darken(@light-grey, 10%);
+		margin-bottom: 15px;
+	}
 }
 
 //this effects anything from the size of iphone 6 to ipad in landscape
